#1: Small deployment fixes